<resources>
    <string name="app_name">MRT4You</string>
    <string name="view_rail_status">Rail Status</string>
    <string name="view_system_map">System Map</string>
    <string name="view_news">Latest Updates</string>
    <string name="saved_routes">Saved Routes</string>
    <string name="search_route">Search Route</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="updates">Updates</string>
    <string name="icon_for_bookmarking">icon for bookmarking</string>
    <string name="mrt_map">mrt map</string>
    <string name="zoom_button_for_map">zoom button for map</string>
    <string name="starting_station">Starting Station</string>
    <string name="destination">Destination</string>
    <string name="line_label">line label</string>
    <string name="change_icon">change icon</string>
    <string name="image_for_line">image for line</string>
    <string name="no_routes_msg">You have yet to save any route!</string>
    <string name="no_connection">Connection has failed</string>
    <string name="no_news">There is currently no news.</string>
    <string name="status">Status</string>
    <string name="mrt_logo">mrt logo</string>
    <string name="line_status">line status</string>
    <string name="refresh">refresh</string>
    <string name="select_hint">Please select…</string>
    <string name="change">Change</string>
    <string name="to">to</string>
    <string name="mrt_image">mrt image</string>
</resources>