<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <TextView
        android:id="@+id/subtitle_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_system_map"
        android:textColor="#000000"
        android:textSize="28sp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageView
        android:id="@+id/mrt_map"
        android:contentDescription="@string/mrt_map"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="68dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_map"
        app:srcCompat="@drawable/mrtmap" />

    <ImageButton
        android:id="@+id/zoomBtn"
        android:contentDescription="@string/zoom_button_for_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:background="@null"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="@id/mrt_map"
        app:layout_constraintEnd_toEndOf="@id/mrt_map"
        app:srcCompat="@android:drawable/ic_menu_zoom" />

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>