<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/mrt_logo"
            android:layout_width="60dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/mrt_logo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/app_name"
            android:contentDescription="@string/app_name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/app_name"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical|end"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/refresh"
        android:scaleType="centerCrop"
        android:src="@drawable/refresh_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_frame" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ns_frame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/refreshBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ns_label"
            android:contentDescription="@string/line_label"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ns_label"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/ns_status"
            android:contentDescription="@string/line_status"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/connection_failed"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/ns_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ew_frame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ns_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ew_label"
            android:contentDescription="@string/line_label"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ew_label"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/ew_status"
            android:contentDescription="@string/line_status"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/connection_failed"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/ew_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cc_frame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ew_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/cc_label"
            android:contentDescription="@string/line_label"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/cc_label"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/cc_status"
            android:contentDescription="@string/line_status"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/connection_failed"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/cc_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>